kubernetes-cluster/test/home-assistant/home-assistant.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-home-assistant
  namespace: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
    - port: 80
      targetPort: 8123
---
apiVersion: v1
kind: Service
metadata:
  name: svc-home-assistant-emulated-hue
  namespace: home-assistant
spec:
  type: NodePort
  selector:
    app: home-assistant
  ports:
    - port: 8300
      targetPort: 8300
      nodePort: 30007
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant-deployment
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      volumes:
        - name: home-assistant-persistent-storage
          persistentVolumeClaim:
            claimName: nfs-pvc-home-assistant
      containers:
        - name: home-assistant
          imagePullPolicy: Always
          image: gsdevme/home-assistant:2021.1.3-3
          ports:
            - containerPort: 8123
            - containerPort: 8300
          volumeMounts:
            - name: home-assistant-persistent-storage
              mountPath: "/config/.storage"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-assistant
  name: home-assistant-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: home-assistant.home.gsdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-home-assistant
                port:
                  number: 80
  tls:
    - hosts:
        - home-assistant.home.gsdev.me
      secretName: home-assistant-home-gsdev-me-tls
